--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,13 @@
-dbus Python Bindings 1.2.20 (UNRELEASED)
-========================================
+dbus Python Bindings 1.3.0 (UNRELEASED)
+=======================================
 
 Dependencies:
 
 • Python 3, version 3.5 or later, is required.
   A security-supported version (currently 3.6 or later) is recommended.
   Python 2 is no longer supported.
+• Installing from source code can be done with either Autotools or Meson.
+• Installing from PyPI using pip still relies on Autotools for now.
 
 API changes:
 
@@ -14,6 +16,18 @@ API changes:
   been removed, along with the rest of the special cases for Python 2.
   (dbus-python!115; Simon McVittie)
 
+Enhancements:
+
+• Add a Meson build system
+  (dbus-python!20; Simon McVittie)
+
+• Add methods to Message objects to manipulate the interactive
+  authorization flag
+  (dbus-python!17; Ricter Zheng)
+
+• Add licensing information in REUSE format
+  (dbus-python!20; Simon McVittie)
+
 Fixes:
 
 • Fix undefined escape sequences in docstrings
@@ -21,24 +35,24 @@ Fixes:
 
 • Make `distcheck` compatible with Automake 1.16.4, by forcing an
   appropriate prefix to be used
-  (dbus-python!115; Simon McVittie)
+  (dbus-python!15; Simon McVittie)
 
 • Update AX_PYTHON_DEVEL from autoconf-archive for better
   forwards-compatibility
-  (dbus-python!115; Simon McVittie)
+  (dbus-python!15; Simon McVittie)
 
 • Avoid various deprecation warnings in the build system
   · distutils.sysconfig → sysconfig
   · distutils.util → sysconfig
   · AC_PROG_LIBTOOL → LT_INIT
   · AC_HELP_STRING → AS_HELP_STRING
-  (dbus-python!115; Simon McVittie)
+  (dbus-python!15; Simon McVittie)
 
 • Fix CI for recent Python and Automake versions
-  (dbus-python!115; Simon McVittie)
+  (dbus-python!15; Simon McVittie)
 
 • Update bug reporting URL
-  (dbus-python!115; Simon McVittie)
+  (dbus-python!15; Simon McVittie)
 
 dbus Python Bindings 1.2.18 (2021-07-20)
 ========================================
