--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-dbus Python Bindings 1.3.0 (UNRELEASED)
+dbus Python Bindings 1.3.0 (2022-09-06)
 =======================================
 
 Dependencies:
