--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dbus Python Bindings 1.3.2 (UNRELEASED)
+=======================================
+
+...
+
 dbus Python Bindings 1.3.0 (2022-09-06)
 =======================================
 
