--- a/README
+++ b/README
@@ -22,14 +22,34 @@ In addition, it uses libdbus (which has known problems with multi-threaded
 use) and attempts to be main-loop-agnostic (which means you have to select
 a suitable main loop for your application).
 
-Alternative ways to get your Python code onto D-Bus include:
+Alternative ways to get your Python code onto D-Bus include, in no
+particular order:
 
 * GDBus, part of the GIO module of `GLib`_, via GObject-Introspection and
   `PyGI`_ (uses the GLib main loop and object model)
 
+* `dasbus`_, a higher-level wrapper around GDBus
+
 * QtDBus, part of `Qt`_, via `PyQt`_ (uses the Qt main loop and object model)
+
+* `dbussy`_, a CTypes wrapper around libdbus using asyncio for event handling
+
+* `dbus-next`_, a pure-Python implementation of the D-Bus protocol
+  using asyncio for event handling
+
+* `dbus-fast`_, a fork of dbus-next emphasizing performance
+
+* `jeepney`_, a pure-Python implementation of the D-Bus protocol with
+  support for several event loop models
+
+Inclusion in this list is not intended to imply endorsement.
 
 .. _GLib: http://developer.gnome.org/glib/
 .. _PyGI: https://live.gnome.org/PyGObject
 .. _Qt:   https://www.qt.io
 .. _PyQT: http://www.riverbankcomputing.co.uk/software/pyqt/intro
+.. _dasbus: https://github.com/rhinstaller/dasbus
+.. _dbussy: https://github.com/ldo/dbussy
+.. _dbus-fast: https://github.com/bluetooth-devices/dbus-fast
+.. _dbus-next: https://github.com/altdesktop/python-dbus-next
+.. _jeepney: https://gitlab.com/takluyver/jeepney
