build: Convert doc option from boolean to feature
This allows -Ddoc=auto, to build the documentation if and only if sphinx
is available.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ dbus Python Bindings 1.4.0 (UNRELEASED)
 
 Dependencies:
 
+* Installing from source code using Meson requires Meson 0.60 or later.
+
 * An upstream-supported Python version (currently 3.9 or later) is strongly
   recommended, and a future version of dbus-python is likely to require
   Python 3.9 or later.
