Post-release version bump
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dbus Python Bindings 1.4.1 (UNRELEASED)
+=======================================
+
+...
+
 dbus Python Bindings 1.4.0 (2025-03-13)
 =======================================
 
